plugins {
    alias(libs.plugins.android.application)
}

android {
    namespace 'ir.aeliux.usbtoolkit'
    compileSdk {
        version = release(37)
    }

    defaultConfig {
        applicationId "ir.aeliux.usbtoolkit"
        minSdk 27
        targetSdk 37
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    def localProperties = new Properties()
    def localPropsFile = rootProject.file("local.properties")
    if (localPropsFile.exists()) {
        localProperties.load(new FileInputStream(localPropsFile))
    }

    signingConfigs {
        release {
            storeFile file(localProperties.getProperty("KEYSTORE_PATH"))
            storePassword localProperties.getProperty("KEYSTORE_PASSWORD")
            keyAlias localProperties.getProperty("KEY_ALIAS")
            keyPassword localProperties.getProperty("KEY_PASSWORD")
        }
    }

    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            applicationIdSuffix '.dbg'
            versionNameSuffix '-debug'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    buildFeatures {
        viewBinding = true
        aidl = true
        buildConfig = true
    }
}

dependencies {
    implementation libs.libsu.core
    implementation libs.libsu.service
    implementation libs.activity.ktx
    implementation libs.appcompat
    implementation libs.constraintlayout
    implementation libs.material
    implementation libs.recyclerview
    testImplementation libs.junit
    androidTestImplementation libs.espresso.core
    androidTestImplementation libs.ext.junit
}